2003-02-22  Mark Salter  <msalter@redhat.com>

	* misc/redboot_ROM.ecm: Fix linux exec address.
	* misc/redboot_RAM.ecm: Ditto

	* cdl/hal_arm_xscale_ixdp425.cdl: Fix HAL_PLATFORM_MACHINE_TYPE.

2003-02-13  Mark Salter  <msalter@redhat.com>

	* include/hal_platform_extras.h: Move uncached area. Create RAM
	alias area.

2003-02-12  Mark Salter  <msalter@redhat.com>

	* misc/*.ecm: Turn on CYGPKG_DEVS_ETH_INTEL_I82559_WRITE_EEPROM.

2003-01-28  Mark Salter  <msalter@redhat.com>

	* misc/redboot_RAM.ecm: Turn on fileio support.
	* misc/redboot_ROM.ecm: Ditto.
	* misc/redboot_ROMRAM.ecm: Ditto.

2003-01-22  Mark Salter  <msalter@redhat.com>

	* include/hal_platform_setup.h: Tweak LED display.

2002-12-20  Mark Salter  <msalter@redhat.com>

	* include/hal_plf_ints.h: Don't use watchdog reset (CPU errata).

2002-12-19  Mark Salter  <msalter@redhat.com>

	* include/ixdp425.h (IXP425_EXP_CS0_INIT): Add in bit to allow
	8-bit access to 16-bit device.

	* cdl/hal_arm_xscale_ixdp425.cdl: Add back ROM startup now that
	bus controller supports 8-bit access to flash.

	* include/pkgconf/mlt_arm_xscale_ixdp425_rom.h: Add.
	* include/pkgconf/mlt_arm_xscale_ixdp425_rom.ldi: Ditto.
	* include/pkgconf/mlt_arm_xscale_ixdp425_rom.mlt: Ditto.
	
	* misc/redboot_RAM.ecm: Allow flash verify.
	* misc/redboot_ROMRAM.ecm: Ditto.
	* misc/redboot_ROM.ecm: Add.

2002-12-18  Mark Salter  <msalter@redhat.com>

	* src/ixdp425_pci.c (cyg_hal_plf_pci_translate_interrupt): Fix
	interrupt vector determination.

	* include/pkgconf/mlt_arm_xscale_ixdp425_ram.mlt: Adjust start to
	work with romram startup.
	* include/pkgconf/mlt_arm_xscale_ixdp425_ram.ldi: Ditto.

2002-12-17  Mark Salter  <msalter@redhat.com>

	* misc/redboot_ROMRAM.ecm: New file.
	* misc/redboot_ROM.ecm: Remove.

	* include/ixdp425.h: Don't define DCACHE_FLUSH_AREA.

	* include/hal_platform_setup.h: Support ROMRAM.
	* include/hal_platform_extras.h: Ditto.
	* cdl/hal_arm_xscale_ixdp425.cdl: Ditto.
